Support both MCM and MLIR compilers in functional tests at once
* Remove `IE_VPUX_USE_EXPERIMENTAL_COMPILER` env var parsing.
* Choose the compiler with LoadNetwork configuration.
* Add helper methods to `KmbLayerTestsCommon` to work with the compiler types.
* Add separate cases for MLIR compiler where applicable.

--- a/tests/functional/CMakeLists.txt
+++ b/tests/functional/CMakeLists.txt
@@ -11,6 +11,7 @@ addIeTargetTest(
     INCLUDES
         ${CMAKE_CURRENT_SOURCE_DIR}
         "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/include"
+        "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/src/vpux_al/include"
         "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/tests/functional/shared_tests_instances"
         "${CMAKE_CURRENT_SOURCE_DIR}/internal"
     DEPENDENCIES
