Fix eltwise flag typo

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -63,7 +63,7 @@
               "max_context_chain_size" : 3,
               "_comment" : "Please make sure setting of cmx_concat inplace match with Scheduler pass",
               "enable_cmx_concat" : true,
-              "enable_inplace_eltwise" : false 
+              "enable_inplace_eltwise" : true 
             },
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
