set both cmx_concat and eltwise transform be false for pass MemContextForHugeActivations to solve accuracy issue

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -62,8 +62,8 @@
               "valley_threshold_percent" : 25,
               "max_context_chain_size" : 3,
               "_comment" : "Please make sure setting of cmx_concat inplace match with Scheduler pass",
-              "enable_cmx_concat" : true,
-              "enable_inplace_eltwise" : true 
+              "enable_cmx_concat" : false,
+              "enable_inplace_eltwise" : false 
             },
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
