Applying cmx_transforms on the dag is not necessary after thinking more for a precondition check at this stage

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -60,10 +60,7 @@
               "enable_pass" : true,
               "peak_threshold_percent" : 49,
               "valley_threshold_percent" : 25,
-              "max_context_chain_size" : 3,
-              "_comment" : "Please make sure setting of cmx_concat inplace match with Scheduler pass",
-              "enable_cmx_concat" : true,
-              "enable_inplace_eltwise" : true 
+              "max_context_chain_size" : 3
             },
             { "name": "LpScheduler",
               "output" : "lp_scheduler_output.txt",
