--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -300,7 +300,7 @@ set(syscalls
 )
 
 add_subdirectory(meta)
-#add_subdirectory(tools)
+add_subdirectory(tools)
 add_subdirectory(contrib/mcm-emulator)
 
 if(TARGET mcm_emulator)
