streaming over k performance

--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -229,6 +229,7 @@ set(pass
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/splitting_across_clusters.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/store_graph_optimizer_decisions.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/activation_streaming_performance.cpp"
+    "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/streaming.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/compute_sparsity_solution.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/store_workload_strategy.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/kmb_adaptation/implicit_operation_passes.cpp"
@@ -258,6 +259,7 @@ set(pass
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/MetaGraph.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/strategy_registry.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/strategy_utils.cpp"
+    "${PROJECT_SOURCE_DIR}/src/pass/optimization/streaming_performance.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/kmb_default_configs.cpp"
 
     "${PROJECT_SOURCE_DIR}/src/pass/scheduling/scheduling_passes.cpp"
