Extend recompute implicit op attr for address attribute

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -64,7 +64,8 @@
               "enable_inplace_eltwise" : true
             },
             {
-              "name" : "RecomputeImplicitOpMemoryLocations"
+                "name" : "RecomputeImplicitOpAttr",
+                "attribute" : "Location"
             },
             "RecomputeTensorMultiClusterAttributesCauseOfSpilling",
             {
@@ -87,6 +88,10 @@
               "output" : "lp_scheduler_output.txt",
               "allocator_mode": true,
               "ddr_control_edges" : true
+            },
+            {
+                "name" : "RecomputeImplicitOpAttr",
+                "attribute" : "address"
             },
             "SetSliceAddressesInCMX",
             "LayerNumbering",
