--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -314,7 +314,8 @@
               "enable_inplace_eltwise": true
             },
             {
-              "name" : "RecomputeImplicitOpMemoryLocations"
+              "name" : "RecomputeImplicitOpAttr",
+              "attribute" : "Location"
             },
             "RecomputeTensorMultiClusterAttributesCauseOfSpilling",
             {
@@ -337,6 +338,10 @@
               "output" : "lp_scheduler_output.txt",
               "allocator_mode": true,
               "ddr_control_edges" : true
+            },
+            {
+              "name" : "RecomputeImplicitOpAttr",
+              "attribute" : "address"
             },
             "SetSliceAddressesInCMX",
             "LayerNumbering",
