--- a/src/mcmCompiler/config/compilation/release_mtl.json
+++ b/src/mcmCompiler/config/compilation/release_mtl.json
@@ -313,7 +313,8 @@
               "enable_inplace_eltwise": true
             },
             {
-              "name" : "RecomputeImplicitOpMemoryLocations"
+                "name" : "RecomputeImplicitOpAttr",
+                "attribute" : "Location"
             },
             "RecomputeTensorMultiClusterAttributesCauseOfSpilling",
             {
@@ -336,6 +337,10 @@
               "output" : "lp_scheduler_output.txt",
               "allocator_mode": true,
               "ddr_control_edges" : true
+            },
+            {
+                "name" : "RecomputeImplicitOpAttr",
+                "attribute" : "address"
             },
             "SetSliceAddressesInCMX",
             "LayerNumbering",
