--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv_hde.json
@@ -24,6 +24,7 @@
                 "enablePipelining": true,
                 "enablePrefetching": true,
                 "enableWeightsSparsity": true,
+                "enableStaticBarriers": true,
                 "real_physical_barriers": 32,
                 "barrier_bound": 16
             }
