--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -194,6 +194,11 @@
         "Singular": [
             "RemoveRedundantUpdateBarriers",
             "DMAOrdering",
+            "SplitBarrier",
+            {
+                "name" : "AssignPhysicalBarrier",
+                "real_physical_barriers": 32
+            },
             "BuildGraphFileKmb",
             {
                 "name": "GenerateBlobKmb",
