--- a/src/mcmCompiler/config/compilation/release_kmb-sc_hde.json
+++ b/src/mcmCompiler/config/compilation/release_kmb-sc_hde.json
@@ -24,6 +24,7 @@
                 "enablePipelining": false,
                 "enablePrefetching": true,
                 "enableWeightsSparsity": false,
+                "enableStaticBarriers": true,
                 "real_physical_barriers": 8,
                 "barrier_bound": 4
             }
