--- a/src/mcmCompiler/config/compilation/release_kmb_B0.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_B0.json
@@ -24,6 +24,7 @@
                 "enablePipelining": false,
                 "enablePrefetching": true,
                 "enableWeightsSparsity": false,
+                "enableStaticBarriers": true,
                 "real_physical_barriers": 32,
                 "barrier_bound": 16
             }
