--- a/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_with_CM_Conv.json
@@ -28,6 +28,7 @@
                 "enablePipelining": true,
                 "enablePrefetching": true,
                 "enableWeightsSparsity": true,
+                "enableStaticBarriers": true,
                 "real_physical_barriers": 32,
                 "barrier_bound": 16
             }
