--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -15,6 +15,7 @@
                 "DDRScratch": 31457280,
                 "cmx": 1843200,
                 "enable_channel_major_conv": false,
+                "enableStaticBarriers": true,
                 "HuffmanCompression": false,
                 "DPUTasksinFloat": false,
                 "PredictionOfQuantizationOutput": false,
