--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -263,7 +263,7 @@ set(pass
     "${PROJECT_SOURCE_DIR}/src/pass/scheduling/scheduling_passes.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/scheduling/layout_dma.cpp"
 
-    "${PROJECT_SOURCE_DIR}/src/pass/serialization/generate_blob_kmb.cpp" 
+    "${PROJECT_SOURCE_DIR}/src/pass/serialization/generate_blob_kmb.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/serialization/physical_barrier_pass.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/serialization/generate_json.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/serialization/global_params_reset.cpp"
@@ -303,7 +303,7 @@ set(syscalls
 
 add_subdirectory(meta)
 add_subdirectory(tools)
-add_subdirectory(contrib/mcm-emulator)
+#add_subdirectory(contrib/mcm-emulator)
 
 if(TARGET mcm_emulator)
     set(EMULATOR mcm_emulator)
