Remove mcm-emulator sub-module
It points to non-exist commit from feature branch.
The feature branch was rebased without sub-module update.

NEVER EVER use feature branch for sub-module,
it MUST point ONLY to PROTECTED branch like master or develop.

--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -301,7 +301,7 @@ set(syscalls
 
 add_subdirectory(meta)
 add_subdirectory(tools)
-add_subdirectory(contrib/mcm-emulator)
+#add_subdirectory(contrib/mcm-emulator)
 
 if(TARGET mcm_emulator)
     set(EMULATOR mcm_emulator)
