Create new HwConvert op that will abstract dequantization on top of Eltwise And task

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -143,6 +143,17 @@
                                 {"name" : "weightsSparsity",                      "value" : false},
                                 {"name" : "pipelining",                           "value" : false}
                             ]
+                        },
+                        {
+                            "name" : "HwConvert",
+                            "strategies": [
+                                {"name" : "streamingStrategies",  "value" : ["StreamOverH"]},
+                                {"name" : "clusteringStrategies", "value" : ["SplitOverH","HKSwitch","Clustering"]},
+                                {"name" : "inputActivationSparsity",             "value" : true},
+                                {"name" : "outputActivationSparsity",             "value" : true},
+                                {"name" : "weightsSparsity",                      "value" : false},
+                                {"name" : "pipelining",                           "value" : false}
+                            ]
                         }
                     ]
                 }
