Enable float scale table option for MTL
- bias and scale value are saved as floats in weights table
 for dtype FP16 and BF16 in MTL (or target that supports it)

--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -91,6 +91,7 @@ set(base
     "${PROJECT_SOURCE_DIR}/src/tensor/dtype/dtype_def/bin.cpp"
     "${PROJECT_SOURCE_DIR}/src/tensor/dtype/dtype_def/float8.cpp"
     "${PROJECT_SOURCE_DIR}/src/tensor/dtype/dtype_def/float16.cpp"
+    "${PROJECT_SOURCE_DIR}/src/tensor/dtype/dtype_def/bfloat16.cpp"
     "${PROJECT_SOURCE_DIR}/src/tensor/dtype/dtype_def/float32.cpp"
     "${PROJECT_SOURCE_DIR}/src/tensor/dtype/dtype_def/float64.cpp"
     "${PROJECT_SOURCE_DIR}/src/tensor/dtype/dtype_def/int2.cpp"
