--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -22,7 +22,7 @@
                 "FloatOutput": true,
                 "Int32Output": false,
                 "PPEAccuracy": false,
-                "ScaleFuseInput": true,
+                "ScaleFuseInput": false,
                 "PWLUsage": true,
                 "ReferenceMode": false,
                 "split_strategy" :
