--- a/tests/functional/CMakeLists.txt
+++ b/tests/functional/CMakeLists.txt
@@ -14,6 +14,7 @@ addIeTargetTest(
         "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/src/vpux_al/include"
         "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/tests/functional/shared_tests_instances"
         "${CMAKE_CURRENT_SOURCE_DIR}/internal"
+        "${CMAKE_CURRENT_SOURCE_DIR}/shared_tests_instances/include"
     DEPENDENCIES
         VPUXPlugin
     LINK_LIBRARIES
