--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/llvm-project"]
 	path = thirdparty/llvm-project
 	url = ../llvm-project.git
+[submodule "src/mcmCompiler/contrib/bitcompactor"]
+	path = src/mcmCompiler/contrib/bitcompactor
+	url = https://gitlab-icv.inn.intel.com/movidius/btc_models
