--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -154,7 +154,6 @@ set(base
     "${PROJECT_SOURCE_DIR}/contrib/huffman_encoding/src/ms_vasprintf.cpp"
 
     "${PROJECT_SOURCE_DIR}/contrib/bitcompactor/src/bitCompactor.cpp"
-    "${PROJECT_SOURCE_DIR}/contrib/bitcompactor/src/bitCompactorCodec.cpp"
 )
 
 set(model
@@ -358,7 +357,7 @@ target_include_directories(mcmCompiler
         "${PROJECT_SOURCE_DIR}/src"
         "${PROJECT_SOURCE_DIR}/src/pass"
         "${PROJECT_SOURCE_DIR}/include/huffman_encoding"
-        "${PROJECT_SOURCE_DIR}/include/bitcompactor"
+        "${PROJECT_SOURCE_DIR}/contrib/bitcompactor/include/"
 )
 
 target_link_libraries(mcmCompiler
