Revert "Fix for precision tests"
This reverts commit 28e7270940c7d10a84ae5515ec68a7d775e85fd0.

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -8,7 +8,7 @@
             "StoreWorkloadStrategy",
             "LoadPWLQuantParams",
             "ConvertOpsToTasks",
-	    "AdaptFixedPointCompute",
+            "AdaptFixedPointCompute",
             "SetUpPPETasks",
             "TaskMultiplePostOps",
             "ForceSerialize",
@@ -19,21 +19,21 @@
             "RemoveCropAlignInCMX",
             "CropOrPadFinalOutput",
             "AlignTaskWeights",
+            "ImplicitOutputDTypeUpdate",
+            "KMBQuantizeConversion",
+            "ConfigureOutputPrecision",
+            "EnsureDTypeCompatibility",
             "GenerateSparsityMapsPopulatedTensors",
             "GenerateWeightsTables",
             "GenerateInstructionListTables",
-            "StrategyLayersToTensors",
             "ComputeTensorsQuantParams",
             "UpdateImplicitLayersQuantizationParams",
             "PopulateWeightsTablesQuantization",
             "RemoveBiasTensors",
+            "StrategyLayersToTensors",
             "SetSparsityAttrForUnpopulatedTensors",
             "SplittingTensorsAcrossClusters",
-            "ImplicitOutputDTypeUpdate",
-            "KMBQuantizeConversion",
-            "ConfigureOutputPrecision",
-            "FuseConcats",
-            "EnsureDTypeCompatibility"
+            "FuseConcats"
         ]
     },
     "finalize": {
