--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_B0.json
@@ -7,7 +7,7 @@
             "StoreWorkloadStrategy",
             "LoadPWLQuantParams",
             "ConvertOpsToTasks",
-	    "AdaptFixedPointCompute",
+            "AdaptFixedPointCompute",
             "SetUpPPETasks",
             "TaskMultiplePostOps",
             "ForceSerialize",
@@ -18,20 +18,21 @@
             "RemoveCropAlignInCMX",
             "CropOrPadFinalOutput",
             "AlignTaskWeights",
+            "ImplicitOutputDTypeUpdate",
+            "KMBQuantizeConversion",
+            "ConfigureOutputPrecision",
+            "EnsureDTypeCompatibility",
             "GenerateSparsityMapsPopulatedTensors",
             "GenerateWeightsTables",
             "GenerateInstructionListTables",
-            "StrategyLayersToTensors",
             "ComputeTensorsQuantParams",
             "UpdateImplicitLayersQuantizationParams",
             "PopulateWeightsTablesQuantization",
             "RemoveBiasTensors",
+            "StrategyLayersToTensors",
             "SetSparsityAttrForUnpopulatedTensors",
             "SplittingTensorsAcrossClusters",
-            "KMBQuantizeConversion",
-            "ConfigureOutputPrecision",
-            "FuseConcats",
-	    "EnsureDTypeCompatibility"
+            "FuseConcats"
         ]
     },
     "finalize": {
