Move bitcompactor submodule to thirdparty
Signed-off-by: Meenakshi Venkataraman <meenakshi.venkataraman@intel.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,5 +11,5 @@
 	path = thirdparty/llvm-project
 	url = ../llvm-project.git
 [submodule "src/mcmCompiler/contrib/bitcompactor"]
-	path = src/mcmCompiler/contrib/bitcompactor
+	path = thirdparty/bitcompactor
 	url = https://gitlab-icv.inn.intel.com/movidius/btc_models
