--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -153,7 +153,7 @@ set(base
     "${PROJECT_SOURCE_DIR}/contrib/huffman_encoding/src/logging.cpp"
     "${PROJECT_SOURCE_DIR}/contrib/huffman_encoding/src/ms_vasprintf.cpp"
 
-    "${PROJECT_SOURCE_DIR}/contrib/bitcompactor/src/bitCompactor.cpp"
+    "${PROJECT_SOURCE_DIR}/../../thirdparty/bitcompactor/src/bitCompactor.cpp"
 )
 
 set(model
@@ -357,7 +357,7 @@ target_include_directories(mcmCompiler
         "${PROJECT_SOURCE_DIR}/src"
         "${PROJECT_SOURCE_DIR}/src/pass"
         "${PROJECT_SOURCE_DIR}/include/huffman_encoding"
-        "${PROJECT_SOURCE_DIR}/contrib/bitcompactor/include/"
+        "${PROJECT_SOURCE_DIR}/../../thirdparty/bitcompactor/include/"
 )
 
 target_link_libraries(mcmCompiler
