--- a/src/zero_backend/CMakeLists.txt
+++ b/src/zero_backend/CMakeLists.txt
@@ -45,7 +45,8 @@ link_system_libraries(${TARGET_NAME}
 target_link_libraries(${TARGET_NAME}
     PRIVATE
         vpux_al
-        kmb_utils)
+        kmb_utils
+        mcmCompiler)
 
 if(ENABLE_CLANG_FORMAT)
     add_clang_format_target(clang_format_${TARGET_NAME} FOR_TARGETS ${TARGET_NAME} ALL)
