Add more general configs to target descriptor
- MTL allows different scales on eltwise inputs
- MTL has different number of bits accuracy for leakyrelu

--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -15,7 +15,7 @@
                 "DDRScratch": 31457280,
                 "cmx": 1843200,
                 "enable_channel_major_conv": false,
-                "enableStaticBarriers": true,
+                "enableStaticBarriers": false,
                 "HuffmanCompression": false,
                 "DPUTasksinFloat": false,
                 "PredictionOfQuantizationOutput": false,
@@ -23,7 +23,7 @@
                 "Int32Output": false,
                 "PPEAccuracy": false,
                 "ScaleFuseInput": false,
-                "PWLUsage": true,
+                "PWLUsage": false,
                 "ReferenceMode": false,
                 "split_strategy" :
                 [
