--- a/src/mcmCompiler/config/compilation/release_mtl.json
+++ b/src/mcmCompiler/config/compilation/release_mtl.json
@@ -16,14 +16,14 @@
                 "MemoryHack": false,
                 "cmx": 1843200,
                 "enable_channel_major_conv": false,
-                "enableStaticBarriers": true,
+                "enableStaticBarriers": false,
                 "HuffmanCompression": false,
                 "DPUTasksinFloat": false,
                 "PredictionOfQuantizationOutput": false,
                 "FloatOutput": true,
                 "Int32Output": false,
                 "PPEAccuracy": false,
-                "PWLUsage": true,
+                "PWLUsage": false,
                 "ScaleFuseInput": false,
                 "ReferenceMode": false,
                 "split_strategy" :
