--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -146,10 +146,9 @@
             },
             "StoreGraphOptimizerDecisions",
             {
-                "name" : "AddActivationStreaming",
-                "max_streams" : 1000
+                "name" : "StreamingForPerformance",
+                "maxHStreams" : 1000
             },
-            "StreamingForPerformance",
             "ComputeSparsitySolution",
             "StreamingOperations",
             "StreamBinaryDataWeights",
