--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "mcm-emulator"]
 	path = src/mcmCompiler/contrib/mcm-emulator
 	url = ssh://git@gitlab-icv.inn.intel.com/kmb-emulator/mcm-emulator.git
+[submodule "thirdparty/hddlunite"]
+	path = thirdparty/hddlunite
+	url = ../../movidius/hddlunite.git
