padding concat for ch maj conv

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -196,6 +196,7 @@
     },
     "serialize": {
         "Singular": [
+            "ReorderPaddingConcatDmas",
             "RemoveRedundantUpdateBarriers",
             "SplitBarrier",
             {
